header z-index bug fixed

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -26,7 +26,7 @@
       position: absolute;
       right: -16px;
       top: 0;
-      z-index: 1;
+      z-index: 100;
       background-color: white;
       box-shadow: 0px 4px 40px 0px #19332a1a;
       margin-left: 32px;
